# wasmcloud-control-plane

./: .gitignore  Cargo.toml  control-plane.example.toml
components/authorizer/: .gitignore  Cargo.toml  wasmcloud.toml
components/authorizer/src/: lib.rs
components/lattice-generator/: .gitignore  Cargo.toml  wasmcloud.toml
components/lattice-generator/src/: lib.rs
crates/wasmcloud-api-client/: Cargo.toml
crates/wasmcloud-api-client/src/: client.rs
crates/wasmcloud-api-types/: Cargo.toml  build.rs
crates/wasmcloud-api-types/src/: lib.rs
crates/wasmcloud-api-types/src/protos/: lattice.proto  metadata.proto  workqueue.proto
src/: auth.rs  bindings.rs  config.rs  lattice_proto.rs  lattice_wrpc.rs  lib.rs  main.rs  secrets.rs  vm.rs  worker.rs
tests/: integration.rs  util.rs
tests/lattice/: mod.rs
tools/bootstrap-hierarchy/: .gitignore  README.md  go.mod  go.sum  import.sh  main.go
tools/bootstrap-hierarchy/internal/: bootstrap.go  nsc.go
wit/: authorizer.wit  deps.toml  lattice.wit  world.wit
