[package]
name = "wasmcloud-api-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
prost = { workspace = true }
tokio-util = { workspace = true }
tokio = { workspace = true }
wasmcloud-api-types = { workspace = true }
tracing = { workspace = true }
